Fix bottom border of accordion titles when collapsed

--- a/src/dataflow/dataflow.sass
+++ b/src/dataflow/dataflow.sass
@@ -216,7 +216,6 @@ $list-item-scale: 0.1
 
         .my-work
           background-color: #ffffff
-          margin-top: -1px
           .header
             display: none
           .section-header,
@@ -228,7 +227,7 @@ $list-item-scale: 0.1
             border-top: 1px solid white
             border-left: 2px solid white
           .section-header
-            padding: 4px
+            padding: 5px
 
         .class-work
           background-color: #ffffff
@@ -322,7 +321,7 @@ $list-item-scale: 0.1
 .section-header
   height: 27px
   &.collapsed
-    min-height: 27px
+    min-height: 26px
 
 .list-container
   display: flex
